<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/homepage_scrollview"
        android:layout_width="0dp"
        android:layout_height="664dp"
        android:contentDescription="@string/alt_homepage_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/page_title"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/homepage_title"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_separator"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="9dp"
                    android:text="-"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/page_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_plan"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:text="Plan"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_separator"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/avatar_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/avatar_example" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/separator_0"
                    android:layout_width="match_parent"
                    android:layout_height="1.25dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/payne_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/date"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/date_today"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="225dp">

                <ImageView
                    android:id="@+id/diet_box"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/simple_box" />

                <TextView
                    android:id="@+id/diet_title"
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:letterSpacing="0.02"
                    android:text="@string/homepage_diet_title"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    app:layout_constraintStart_toStartOf="@+id/diet_box"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/diet_box"
                    app:layout_constraintStart_toStartOf="@+id/diet_box"
                    app:layout_constraintTop_toTopOf="@+id/diet_box"
                    app:layout_constraintVertical_bias="0.385" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/diet_goal_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/diet_box"
                    app:layout_constraintStart_toEndOf="@+id/pieChart"
                    app:layout_constraintTop_toTopOf="@+id/pieChart">

                    <TextView
                        android:id="@+id/diet_goal_title"
                        android:fontFamily="@font/inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_goal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/diet_goal_value"
                        android:fontFamily="@font/inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/diet_goal_title"
                        app:layout_constraintTop_toBottomOf="@+id/diet_goal_title" />

                    <ImageView
                        android:id="@+id/diet_goal_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/diet_goal_value"
                        app:layout_constraintEnd_toStartOf="@+id/diet_goal_title"
                        app:layout_constraintTop_toTopOf="@+id/diet_goal_title"
                        app:srcCompat="@drawable/gray_goal_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/diet_foods_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/diet_exercise_container"
                    app:layout_constraintStart_toStartOf="@+id/diet_goal_container"
                    app:layout_constraintTop_toBottomOf="@+id/diet_goal_container">

                    <TextView
                        android:id="@+id/diet_foods_title"
                        android:fontFamily="@font/inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_food"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/diet_foods_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/diet_foods_title"
                        app:layout_constraintTop_toBottomOf="@+id/diet_foods_title" />

                    <ImageView
                        android:id="@+id/diet_foods_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/diet_foods_value"
                        app:layout_constraintEnd_toStartOf="@+id/diet_foods_title"
                        app:layout_constraintTop_toTopOf="@+id/diet_foods_title"
                        app:srcCompat="@drawable/foods" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/diet_exercise_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/pieChart"
                    app:layout_constraintStart_toStartOf="@+id/diet_foods_container">

                    <TextView
                        android:id="@+id/diet_exercise_title"
                        android:fontFamily="@font/inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diet_exercise"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/diet_exercise_value"
                        android:fontFamily="@font/inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/diet_exercise_title"
                        app:layout_constraintTop_toBottomOf="@+id/diet_exercise_title" />

                    <ImageView
                        android:id="@+id/diet_exercise_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/diet_exercise_value"
                        app:layout_constraintEnd_toStartOf="@+id/diet_exercise_title"
                        app:layout_constraintTop_toTopOf="@+id/diet_exercise_title"
                        app:srcCompat="@drawable/weights" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="341dp">

                <View
                    android:id="@+id/separator_1"
                    android:layout_width="match_parent"
                    android:layout_height="1.25dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/payne_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>